cambio de nombre

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Johnny Barrantes</title>
+    <title>Mundo Assasin's</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -156,6 +156,9 @@
         </div>
         <div>
           Hecho con &lt;3 por <a href="#">Johnny</a>
+        </div>
+        <div>
+          <p>Imágenes utilizadas sin fines de lucro</p>
         </div>
       </div>
     </footer>
